<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="botao_login">Login</string>
    <string name="edit_senha_hint">Digite sua senha</string>
    <string name="edit_nome_hint">Digite seu nome</string>
    <string name="edit_usuario">Digite seu usuário</string>
    <string name="edit_email_hint">Digite seu E-Mail</string>
    <string name="configuracaoes">Configurações</string>
    <string name="actionSair">Sair</string>
    <string name="actionCompartilhar">Compartilhar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_feed_usuario">FeedUsuarioActivity</string>
</resources>
