<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_degrade"
    android:padding="10dp"
    android:gravity="center_horizontal|center_vertical"
    tools:context=".Activity.CadastroActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="159dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            app:srcCompat="@drawable/usuario" />

        <EditText
            android:id="@+id/editTextUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="120dp"
            android:background="@drawable/fundo_caixa_texto"
            android:hint="@string/edit_usuario"
            android:inputType="textPersonName"
            android:padding="16dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextUsuario"
            android:background="@drawable/fundo_caixa_texto"
            android:ems="10"
            android:hint="@string/edit_email_hint"
            android:inputType="textPersonName"
            android:padding="16dp" />

        <EditText
            android:id="@+id/editTextSenhaUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextEmail"
            android:background="@drawable/fundo_caixa_texto"
            android:hint="@string/edit_senha_hint"
            android:inputType="textPassword"
            android:padding="16dp" />

        <Button
            android:id="@+id/buttonCadastrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextSenhaUsuario"
            android:background="@drawable/fundo_botao"
            android:text="Cadastrar" />

    </RelativeLayout>



</RelativeLayout>