<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_degrade"
    android:padding="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context=".Activity.LoginActivity"
    android:layout_gravity="center_vertical|center_horizontal">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="88dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/logo"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="35dp" />

        <EditText
            android:id="@+id/editTextUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="84dp"
            android:background="@drawable/fundo_caixa_texto"
            android:ems="10"
            android:hint="@string/edit_nome_hint"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/editTextSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="169dp"
            android:background="@drawable/fundo_caixa_texto"
            android:ems="10"
            android:hint="@string/edit_senha_hint"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="244dp"
            android:background="@drawable/fundo_botao"
            android:text="@string/botao_login" />

        <TextView
            android:id="@+id/textViewCriarConta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonLogin"
            android:text="Não tem uma conta? Crie uma" />


    </RelativeLayout>

</RelativeLayout>